--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,6 +8,8 @@
 @media screen and (max-width: 1024px) {
   .footer {
     margin-top: calc(88px + 4 * (100vw - 768px) / (1024 - 768));
+    margin-left: calc(24px + 24 * (100vw - 768px) / (1024 - 768));
+    margin-right: calc(24px + 24 * (100vw - 768px) / (1024 - 768));
   }
 }
 
@@ -15,6 +17,7 @@
   .footer {
     margin-top: calc(66px + 22 * (100vw - 320px) / (768 - 320));
     margin-left: 16px;
+    margin-right: 0;
     flex-direction: column;
     align-items: flex-start;
     gap: 48px;
