--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.63;
+  line-height: 1.611;
   max-width: 484px;
   grid-area: paragraph;
   margin: 0;
